--- a/css/pop_up.css
+++ b/css/pop_up.css
@@ -5,7 +5,7 @@
     height: 50vh;
     position: relative;
     top: 100%;
-    left: 20vw;
+    left: 19vw;
     font-weight: bold;
     font-size: 7vw;
     text-align: center;
@@ -18,6 +18,7 @@
     width: 25vw;
     height: 5vh;
     letter-spacing: 1px;
+    font-size: 2vw;  
     font-size: 2vw;  
     font-weight: 1;
     position: absolute;
@@ -47,7 +48,7 @@
 .pop_up_button_left{
     border: 3px solid white;
     position: absolute;
-    left: 19vw;
+    left: 18vw;
 }
 .pop_up_button_left:hover{
     background-color: white;
